feat: Ajustes respuesta endpoints GetById udistrital/argo_documentacion#142
